# simple-ascii-menu-ut

./: README.md
c/: commands.c  commands.h  simple_menu.c  simple_menu_refactored.c
c++/: CMakeLists.txt  CommandProcessor.cpp  CommandProcessor.h  simple_menu.cpp  simple_menu_class.cpp  test_simple_menu.cpp
c/ut/: test_execute_command.c  test_process_buffer.c  test_process_buffer_cmocka.c
python/: simple_menu.py  test_command_processor.py  test_module.py
rust/src/: main.rs
